# akermanmodel

src/ackermann_gazebo/: CMakeLists.txt  package.xml
src/ackermann_gazebo/src/: rectangle_node.cpp  topic_pub_cpp.cpp
src/ackermann_gazebo/urdf/: bot_base.xacro  gz_ackermann_core.xacro
